--- a/commerce/package.json
+++ b/commerce/package.json
@@ -15,6 +15,7 @@
     "@swc/core": "^1.3.41",
     "@swc/helpers": "^0.4.14",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.3",
     "nodemon": "^2.0.21",
     "regenerator-runtime": "^0.13.11",
@@ -22,9 +23,11 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
     "zod": "^3.21.4"
