--- a/cookie-auth-with-react-protect/tsconfig.json
+++ b/cookie-auth-with-react-protect/tsconfig.json
@@ -8,7 +8,8 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "declaration": true
+    "declaration": true,
+    "typeRoots": ["@types"]
   },
   "ts-node": {
     "swc": true
