--- a/tasks-manager/package.json
+++ b/tasks-manager/package.json
@@ -2,7 +2,7 @@
   "name": "tasks-manager",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/index.ts",
