--- a/graphql-todo/package.json
+++ b/graphql-todo/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index",
+    "compile": "tsc -p tsconfig.json"
+  },
   "devDependencies": {
     "@swc/core": "^1.3.67",
     "@swc/helpers": "^0.5.1",
@@ -11,5 +16,12 @@
     "regenerator-runtime": "^0.13.11",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@apollo/server": "^4.7.5",
+    "dotenv": "^16.3.1",
+    "graphql": "^16.7.1",
+    "mongoose": "^7.3.1",
+    "zod": "^3.21.4"
   }
 }
